fixed all fils coding for better game result

--- a/index.html
+++ b/index.html
@@ -34,23 +34,22 @@
           <p>💧 Vaporeon (Water)</p>
         </button>
       </div>
-
       <div class="battle">
         <div id="player-choice">
           <h3>Your Pokémon</h3>
-          <img id="player-img" src="" alt="Your chosen Pokémon will appear here" />
+          <img id="player-img" src="images/pngimg.com - pokeball_PNG7.png" alt="Pokéball placeholder" />
         </div>
         <div id="computer-choice">
           <h3>Computer's Pokémon</h3>
-          <img id="computer-img" src="" alt="Computer's Pokémon will appear here" />
+          <img id="computer-img" src="images/pngimg.com - pokeball_PNG7.png" alt="Pokéball placeholder" />
         </div>
       </div>
-
+      <!-- Result Section -->
       <div class="result">
         <p id="message">Choose a Pokémon to start the battle!</p>
         <p id="score">Wins: 0 | Losses: 0</p>
       </div>
-
+     
       <!-- Replay Button -->
       <button id="replay" aria-label="Restart the game">Replay</button>
     </section>
